fix(gui): make sidebar content vertically scrollable
Add min-height: 0 to .agents-sidebar-content to fix flex shrinking
behavior that was preventing the scrollbar from appearing when content
overflows.

The min-height: 0 allows flex items to shrink below their content size,
which is necessary for overflow-y: auto to create a scrollable area.

Also split overflow: hidden into overflow-x/y for clarity.

Fixes bn-cc25

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -604,7 +604,8 @@
             flex-direction: column;
             z-index: 100;
             transition: width 0.2s ease;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: hidden;
         }
 
         .agents-sidebar:hover,
@@ -644,6 +645,7 @@
 
         .agents-sidebar-content {
             flex: 1;
+            min-height: 0;
             overflow-y: auto;
             overflow-x: hidden;
             padding: 0.5rem;
