feat(gui): reposition toasts to bottom-left with slide-up animation
- Move toast container from top-center to bottom-left corner
- Use flex-direction: column-reverse so newest toasts appear on top
- Change animations to slide up from bottom instead of down from top
- Toasts now fade out by sliding down on dismiss

Closes: bn-f41b

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -4125,13 +4125,12 @@
         /* Toast Notification System */
         .toast-container {
             position: fixed;
-            top: 1rem;
-            left: 50%;
-            transform: translateX(-50%);
+            bottom: 1rem;
+            left: 1rem;
             z-index: 10000;
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            flex-direction: column-reverse;
+            align-items: flex-start;
             gap: 0.5rem;
             pointer-events: none;
         }
@@ -4160,7 +4159,7 @@
         @keyframes toastSlideIn {
             from {
                 opacity: 0;
-                transform: translateY(-20px);
+                transform: translateY(20px);
             }
             to {
                 opacity: 1;
@@ -4175,7 +4174,7 @@
             }
             to {
                 opacity: 0;
-                transform: translateY(-20px);
+                transform: translateY(20px);
             }
         }
 
