fix(gui): add bottom padding to sidebar to prevent last edge cutoff
Increase bottom padding on .agents-sidebar-content from 0.5rem to 1rem
to ensure the last edge filter button in the graph view sidebar is
fully visible when scrolled to the bottom.

Fixes: bn-dd5c

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -648,7 +648,7 @@
             min-height: 0;
             overflow-y: auto;
             overflow-x: hidden;
-            padding: 0.5rem;
+            padding: 0.5rem 0.5rem 1rem 0.5rem;
             opacity: 0;
             transition: opacity 0.2s ease;
         }
