fix: details pane title now reflects entity type
Added 'doc' to typeLabels in GUI details pane and changed fallback
from 'Task Details' to 'Entity Details' for unknown types.

Fixes: bn-a128

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -7735,9 +7735,10 @@
                 'idea': 'Idea Details',
                 'milestone': 'Milestone Details',
                 'queue': 'Queue Details',
-                'agent': 'Agent Details'
+                'agent': 'Agent Details',
+                'doc': 'Doc Details'
             };
-            typeTitleEl.textContent = typeLabels[task.type] || 'Task Details';
+            typeTitleEl.textContent = typeLabels[task.type] || 'Entity Details';
 
             // Update panel content
             idEl.textContent = task.id;
