--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -6744,7 +6744,8 @@
                 }
             });
 
-            finalCanvas.addEventListener('dblclick', (e) => {
+            // Helper function to handle node/edge selection (used by dblclick and ctrl+click)
+            function handleNodeSelection(e) {
                 const rect = finalCanvas.getBoundingClientRect();
                 const mouseX = e.clientX - rect.left;
                 const mouseY = e.clientY - rect.top;
@@ -6764,7 +6765,7 @@
                     if (node.type === 'agent' && node._agent) {
                         showAgentDetailModal(node._agent);
                         e.preventDefault();
-                        return;
+                        return true;
                     }
                     
                     // Toggle selection for non-agent nodes
@@ -6778,22 +6779,36 @@
                     updateEdgeInfoPanel(null);
                     // Update info panel with current selection
                     updateInfoPanel(state.graph.selectedNode);
+                    return true;
                 } else {
                     // Check for edge under mouse
                     const edge = findHoveredEdge(worldPos.x, worldPos.y);
                     if (edge) {
                         // Show edge info panel
                         updateEdgeInfoPanel(edge);
+                        return true;
                     } else {
                         // Click on empty space deselects everything
                         state.graph.selectedNode = null;
                         state.graph.selectedEdge = null;
                         updateInfoPanel(null);
                         updateEdgeInfoPanel(null);
+                        return false;
                     }
                 }
+            }
 
+            finalCanvas.addEventListener('dblclick', (e) => {
+                handleNodeSelection(e);
                 e.preventDefault();
+            });
+
+            // Ctrl+click (or Cmd+click on Mac) opens details pane as alternative to double-click
+            finalCanvas.addEventListener('click', (e) => {
+                if (e.ctrlKey || e.metaKey) {
+                    handleNodeSelection(e);
+                    e.preventDefault();
+                }
             });
 
             // Mouse wheel zoom
