fix(gui): preserve _agent property in graph nodes for double-click modal
The _agent property was not being copied from task objects to graph nodes
in buildGraphData(), causing double-click on agent nodes to fail because
node._agent was undefined. This property is required for showAgentDetailModal().

Fixes: bn-744f

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -8707,6 +8707,7 @@
                         type: task.type || 'task',
                         closed_at: task.closed_at,  // Track when node was completed for fade-out
                         _departing: task._departing,  // Track departing agents for fade-out
+                        _agent: task._agent,  // Preserve agent data for double-click modal
                         x: existing.x,
                         y: existing.y,
                         vx: 0,
@@ -8728,6 +8729,7 @@
                         type: task.type || 'task',
                         closed_at: task.closed_at,  // Track when node was completed for fade-out
                         _departing: task._departing,  // Track departing agents for fade-out
+                        _agent: task._agent,  // Preserve agent data for double-click modal
                         x: Math.cos(angle) * radius,
                         y: Math.sin(angle) * radius,
                         vx: 0,
